[package]
name = "pumpfun-launcher"
version = "0.1.1"
edition = "2021"
default-run = "pumpfun-launcher"

[[bin]]
name = "pumpfun-launcher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

# Only pumpfun to test if it builds alone
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-program = "3.0.0"
solana-commitment-config = "3.0.0"
spl-token = "3.0.0"
spl-associated-token-account = "1.0.3"

# Utilities only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
bs58 = "0.5"
rayon = "1.8"
base64 = "0.21"
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"